[gd_scene load_steps=4 format=3 uid="uid://ftb12yvdyn3k"]

[ext_resource type="Script" path="res://scenes/player/ability/roll_ability.gd" id="1_nhib2"]
[ext_resource type="Script" path="res://component/hit_box_component.gd" id="2_s52lp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fb8eg"]
radius = 10.0499

[node name="RollAbility" type="Node2D"]
script = ExtResource("1_nhib2")

[node name="RollCooldownTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("2_s52lp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_fb8eg")
